--- a/Tex/src/plots/unbalanced.tex
+++ b/Tex/src/plots/unbalanced.tex
@@ -1,77 +1,80 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,unbalanced,
-			title=100\% read-only operations,
-			ylabel = {Key range [$0,2\cdot10^4$]},]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+title={\textbf{0\%read-only}},
+ylabel = { \textbf{Big Tree ($\sim10^6$ elements)} \\ million ops/sec}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/0C2000K.txt}; 
+\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
+{results/0C2000K.txt}; 
+\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/0C2000K.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/0C2000K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced,title={\textbf{50\% read-only}}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/50C2000K.txt}; 
+\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
+{results/50C2000K.txt}; 
+\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/50C2000K.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/50C2000K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced,
+title= { \textbf{100\% read-only}}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/100C2000K.txt}; 
+\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
+{results/100C2000K.txt}; 
+\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/100C2000K.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/100C2000K.txt};
+\end{axis}
+\end{tikzpicture}
+
+
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced, 
+ylabel = { \textbf{Small Tree ($\sim10^4$ elements)} \\ million ops/sec},
+xlabel={Threads}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/0C20K.txt}; 
+\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
+{results/0C20K.txt}; 
+\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/0C20K.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/0C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced, xlabel={Threads}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/50C20K.txt}; 
+\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
+{results/50C20K.txt}; 
+\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/50C20K.txt};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/50C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced, xlabel={Threads}]
+\addplot [black,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/100C20K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
 {results/100C20K.txt}; 
 \addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
 {results/100C20K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/100C20K.txt};
 \end{axis}
 \end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced, title=50\% read-only operations]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/50C20K.txt}; 
-\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
-{results/50C20K.txt}; 
-\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/50C20K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/50C20K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced, title=0\% read-only operations]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/0C20K.txt}; 
-\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
-{results/0C20K.txt}; 
-\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/0C20K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/0C20K.txt};
-\end{axis}
-\end{tikzpicture}
-
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced,ylabel = {Key range [$0,2\cdot10^6$]},]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/100C2000K.txt}; 
-\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
-{results/100C2000K.txt}; 
-\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/100C2000K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/100C2000K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/50C2000K.txt}; 
-\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
-{results/50C2000K.txt}; 
-\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/50C2000K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/50C2000K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/0C2000K.txt}; 
-\addplot [orange,mark=diamond] table [x={threads}, y={Danaunbalanced}]
-{results/0C2000K.txt}; 
-\addplot [gray,mark=o] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/0C2000K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/0C2000K.txt};
-\end{axis}
-\end{tikzpicture}
-
 \ref{unbalancedLegened}
